# termcolor

./: .gitignore  .mailmap  .travis.yml  BUCK  CMakeLists.txt  README  README.rst  buckaroo.json
.github/workflows/: ci.yml  cmake.yml  macos.yml  tipi.yml  ubuntu.yml  windows.yml
.tipi/: opts.windows
docs/: conf.py  index.rst
examples/cmake-external/: CMakeLists.txt
examples/cmake-fetch/: CMakeLists.txt
examples/cmake-package/: CMakeLists.txt
examples/cmake-submodule/: CMakeLists.txt  example.cpp
examples/tipi-simple/: README.rst  example.cpp
examples/tipi-simple/.tipi/: deps
include/termcolor/: termcolor.hpp
test/: BUCK  subtest.cpp  subtest.hpp  test.cpp
vs/: .gitignore  termcolor.sln  termcolor.vcxproj  termcolor.vcxproj.filters
